fix: rg-calendar z-index 수정

--- a/src/components/grid/KwGrid.scss
+++ b/src/components/grid/KwGrid.scss
@@ -1017,6 +1017,7 @@
   padding: 5px 12px 11px !important;
   box-shadow: none;
   transform: translate(-4px, -8px);
+  z-index: 6000;
 }
 
 .rg-fixed-column-bar {
